mainnet.gno.land/extracted/r/moul/x/daily/crowdfund/v1/README.md
# Crowdfund

> ⚠️ **Experimental — generated with no human supervision** by the daily MCP pipeline (Solidity→Gno port). Not audited. See [r/moul/x/daily](https://github.com/moul/gno-contracts/blob/main/r/moul/x/daily/README.md).

---


A gno.land realm port of the classic Solidity **Kickstarter-style crowdfunding**
contract. It keeps the same lifecycle — launch a campaign with a goal and a
deadline, let backers pledge and unpledge, then either let the creator claim on
success or let backers refund on failure — but models everything as plain
`uint64` accounting (no real coin transfer), the idiomatic Gno equivalent of the
Solidity `mapping(address => uint)` balances.

Deadlines use `runtime.ChainHeight()` (block height) instead of
`block.timestamp`, `msg.sender` becomes `unsafe.PreviousRealm().Address()`,
`require` becomes `panic`, and campaigns live in an ordered `avl.Tree` so
`Render` lists them deterministically with a `▓░` progress bar.

## Transactions

- `Launch(goal uint64, durationBlocks int) int` — create a campaign (returns id); deadline = current height + duration.
- `Pledge(id int, amount uint64)` — back a campaign before its deadline.
- `Unpledge(id int, amount uint64)` — withdraw part/all of your pledge before the deadline.
- `Claim(id int)` — creator claims funds after the deadline if `pledged >= goal`.
- `Refund(id int)` — backer reclaims their pledge after the deadline if the goal was missed.

## Example

```
Launch(1000, 100)      // campaign #1, goal 1000, ends 100 blocks from now -> returns 1
Pledge(1, 400)         // back campaign #1 with 400
Pledge(1, 700)         // total now 1100 (>= goal)
Unpledge(1, 100)       // change of mind: total back to 1000
// ... after block height passes the deadline ...
Claim(1)               // creator claims 1000 (goal met)
```

Read-only `Render("")` shows every campaign with its progress bar, goal,
pledged total, deadline block and state (Active / Funded / Funded (claimed) /
Failed).

## What changed in v1

State moved from a hand-rolled `avl.Tree` + `nextID` + zero-padding helper to
[`p/moul/kit/store`](/p/moul/kit/store/v0), which keys entries by
[`seqid`](/p/nt/seqid/v0) instead of a fixed-width decimal string.

v0 padded ids to width 12. Past that width the padding stops and the tree
orders `"1000000000000"` before `"999999999999"`, so every list this realm
renders would be wrong from that entry on. `store` keys are 8 big-endian bytes
whose order is numeric for every `uint64`, so there is no width left to outgrow.

`Campaign` loses its `ID` field, which the store now owns, and the realm's local
`mustGet` becomes one line: the store's labelled `MustGet` panics
`campaign #7 not found` where `v0` said only `campaign not found`. Each
campaign keeps its own address-keyed `pledges` tree, which the store does not
cover. Campaign ids already started at 1, so nothing shifts.

This is a storage change, which under this repo's versioning rule is a
compatibility change, hence a new version rather than an edit in place.
[`v0`](https://github.com/moul/gno-contracts/tree/4f2df83869b80470eb81c48a82fdbe82256b8113/r/moul/x/daily/crowdfund) stays live and untouched.

<!-- BEGIN GNOCONTRACTS FOOTER (generated by `make readmes`; do not edit below) -->

---

Part of **[moul/gno-contracts](https://github.com/moul/gno-contracts)** — moul's versioned gno.land contracts. See the repository for the full catalog, build/test tooling, and usage.

**Dependency graph:**

![gno.land/r/moul/x/daily/crowdfund/v1 dependency graph](https://raw.githubusercontent.com/moul/gno-contracts/main/_assets/gno.land/r/moul/x/daily/crowdfund/v1/deps.png)

> 🧪 **Highly experimental — potentially vibe-coded.** Not audited; may break, change, or be removed at any time. Do not use with anything of value. Full disclaimer: [DISCLAIMER](https://github.com/moul/gno-contracts/blob/main/DISCLAIMER.md).

<!-- END GNOCONTRACTS FOOTER -->
